Small changes to locale and order

--- a/locale/en/electricboiler.cfg
+++ b/locale/en/electricboiler.cfg
@@ -1,37 +1,37 @@
 [entity-name]
 electric-boiler=Electric Boiler
-electric-boiler-2=Electric Boiler MK2
-electric-boiler-3=Electric Boiler MK3
-electric-boiler-4=Electric Boiler MK4
-electric-boiler-5=Electric Boiler MK5
+electric-boiler-2=Electric Boiler 2
+electric-boiler-3=Electric Boiler 3
+electric-boiler-4=Electric Boiler 4
+electric-boiler-5=Electric Boiler 5
 
 [item-name]
 electric-boiler=Electric Boiler
-electric-boiler-2=Electric Boiler MK2
-electric-boiler-3=Electric Boiler MK3
-electric-boiler-4=Electric Boiler MK4
-electric-boiler-5=Electric Boiler MK5
+electric-boiler-2=Electric Boiler 2
+electric-boiler-3=Electric Boiler 3
+electric-boiler-4=Electric Boiler 4
+electric-boiler-5=Electric Boiler 5
 
 [recipe-name]
 electric-boiler=Electric Boiler
-electric-boiler-2=Electric Boiler MK2
-electric-boiler-3=Electric Boiler MK3
-electric-boiler-4=Electric Boiler MK4
-electric-boiler-5=Electric Boiler MK5
+electric-boiler-2=Electric Boiler 2
+electric-boiler-3=Electric Boiler 3
+electric-boiler-4=Electric Boiler 4
+electric-boiler-5=Electric Boiler 5
 
 [technology-name]
 electric-boiler=Electric Boiler
-electric-boiler-2=Electric Boiler MK2
-electric-boiler-3=Electric Boiler MK3
-electric-boiler-4=Electric Boiler MK4
-electric-boiler-5=Electric Boiler MK5
+electric-boiler-2=Electric Boiler 2
+electric-boiler-3=Electric Boiler 3
+electric-boiler-4=Electric Boiler 4
+electric-boiler-5=Electric Boiler 5
 
 [technology-description]
 electric-boiler=Enables the Electric Boiler.
-electric-boiler-2=Enables the Electric Boiler MK2.
-electric-boiler-3=Enables the Electric Boiler MK3.
-electric-boiler-4=Enables the Electric Boiler MK4.
-electric-boiler-5=Enables the Electric Boiler MK5.
+electric-boiler-2=Enables the Electric Boiler 2.
+electric-boiler-3=Enables the Electric Boiler 3.
+electric-boiler-4=Enables the Electric Boiler 4.
+electric-boiler-5=Enables the Electric Boiler 5.
 
 [mod-setting-name]
 efficiency=Power output of vanilla electric boilers
